Update resources y documentación de prenda
