# app/Http/Controllers/Api/MarcaController.php
@@ -9,7 +9,7 @@ class MarcaController extends ApiController
 {
 
      /**
-     * Listado de todas las marcas.
+     * Retorna un listado con la informacion de todas las marcas
      * @OA\Get (
      *     path="/rest/marcas",
      *     tags={"Marcas"},
@@ -28,6 +28,16 @@ class MarcaController extends ApiController
      *                         example="1"
      *                     ),
      *                     @OA\Property(
+     *                         property="created_at",
+     *                         type="string",
+     *                         example="2023-05-07 00:00:00"
+     *                     ),
+     *                     @OA\Property(
+     *                         property="updated_at",
+     *                         type="string",
+     *                         example="2023-05-07 00:00:00"
+     *                     ),
+     *                     @OA\Property(
      *                         property="nombre",
      *                         type="string",
      *                         example="Adidas"
@@ -41,16 +51,6 @@ class MarcaController extends ApiController
      *                         property="descripcion",
      *                         type="string",
      *                         example="Imposible is Nothing"
-     *                     ),
-     *                     @OA\Property(
-     *                         property="created_at",
-     *                         type="string",
-     *                         example="2023-05-07 00:00:00"
-     *                     ),
-     *                     @OA\Property(
-     *                         property="updated_at",
-     *                         type="string",
-     *                         example="2023-05-07 00:00:00"
      *                     )
      *                 )
      *             )
@@ -64,7 +64,7 @@ class MarcaController extends ApiController
     }
 
      /**
-     * Mostrar la información de una marca.
+     * Retorna la información de una marca especifica
      * @OA\Get (
      *     path="/rest/marcas/{id}",
      *     tags={"Marcas"},
@@ -79,13 +79,13 @@ class MarcaController extends ApiController
      *         description="OK",
      *         @OA\JsonContent(
      *              @OA\Property(property="id", type="number", example=2),
+     *              @OA\Property(property="created_at", type="string", example="2023-05-07 19:57:30"),
+     *              @OA\Property(property="updated_at", type="string", example="2023-05-07 19:57:30"),
      *              @OA\Property(property="nombre", type="string", example="Nike"),
      *              @OA\Property(property="imagen", 
      *                          type="string", 
      *                          example="https://static.ffx.io/images/$zoom_1%2C$multiply_2.1113%2C$ratio_1.777778%2C$width_485%2C$x_53%2C$y_54/t_crop_custom/q_86%2Cf_auto/f54a63f81d65d0b5b4db5f2235bbe665f5310227"),
-     *              @OA\Property(property="descripcion", type="string", example="Just do it"),
-     *              @OA\Property(property="created_at", type="string", example="2023-05-07 19:57:30"),
-     *              @OA\Property(property="updated_at", type="string", example="2023-05-07 19:57:30")
+     *              @OA\Property(property="descripcion", type="string", example="Just do it")
      *         )
      *     ),
      *      @OA\Response(
