# app/Http/Resources/MarcaResource.php
@@ -16,11 +16,11 @@ class MarcaResource extends JsonResource
     {
         return [
             'id' => $this->id,
+            'created_at' => $this->created_at->format('Y-m-d H:i:s'),
+            'updated_at' => $this->updated_at->format('Y-m-d H:i:s'),
             'nombre' => $this->nombre,
             'imagen' => $this->imagen,
             'descripcion' => $this->descripcion,
-            'created_at' => $this->created_at->format('Y-m-d H:i:s'),
-            'updated_at' => $this->updated_at->format('Y-m-d H:i:s'),
         ];
     }
 }
