# app/Http/Resources/PedidoResource.php
@@ -14,15 +14,13 @@ class PedidoResource extends JsonResource
      */
     public function toArray(Request $request): array
     {
-        $date = ($this->date);
-
         return [
             'id' => $this->id,
+            'created_at' => $this->created_at->format('Y-m-d H:i:s'),
+            'updated_at' => $this->updated_at->format('Y-m-d H:i:s'),
             'mail_cliente' => $this->mail_cliente,
             'monto' => $this->monto,
             'fechaHora' => $this->fechaHora,
-            'created_at' => $this->created_at->format('Y-m-d H:i:s'),
-            'updated_at' => $this->updated_at->format('Y-m-d H:i:s'),
         ];
     }
 }
