# app/Http/Resources/PrendaResource.php
@@ -16,16 +16,16 @@ class PrendaResource extends JsonResource
     {
         return [
             'id' => $this->id,
+            'created_at' => $this->created_at->format('Y-m-d H:i:s'),
+            'updated_at' => $this->updated_at->format('Y-m-d H:i:s'),
             'nombre' => $this->nombre,
-            'marca_id' => $this->marca_id,
-            'categoria_id' => $this->categoria_id,
+            'marca' => $this->marca->only(['id', 'nombre']),
+            'categoria' => $this->categoria->only(['id', 'nombre']),
             'talle' => $this->talle,
             'color' => $this->color,
             'imagen' => $this->imagen,
             'precio' => $this->precio,
             'descripcion' => $this->descripcion,
-            'created_at' => $this->created_at->format('Y-m-d H:i:s'),
-            'updated_at' => $this->updated_at->format('Y-m-d H:i:s'),
         ];
     }
 }
